.metadata/.plugins/org.eclipse.cdt.ui/STM32L476RG_NUCLEO.build.log
09:42:12 **** Incremental Build of configuration Debug for project STM32L476RG_NUCLEO ****
make -j12 all 
arm-none-eabi-gcc "/home/felipe/Documents/Estructuras/STM32CubeL4/Projects/NUCLEO-L476RG/Examples/TIM/TIM_PWMOutput/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32L476xx -DUSE_HAL_DRIVER -DUSE_STM32L4XX_NUCLEO -c -I../../../Inc -I../../../../../../../../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../../../../../../../../Drivers/STM32L4xx_HAL_Driver/Inc -I../../../../../../../../Drivers/BSP/STM32L4xx_Nucleo -I../../../../../../../../Drivers/BSP/Components/Common -I../../../../../../../../Drivers/CMSIS/Include -Os -ffunction-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Example/User/main.d" -MT"Example/User/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Example/User/main.o"
/home/felipe/Documents/Estructuras/STM32CubeL4/Projects/NUCLEO-L476RG/Examples/TIM/TIM_PWMOutput/Src/main.c: In function 'SystemClock_Config':
/home/felipe/Documents/Estructuras/STM32CubeL4/Projects/NUCLEO-L476RG/Examples/TIM/TIM_PWMOutput/Src/main.c:301:1: warning: statement with no effect [-Wunused-value]
  301 | 5
      | ^
/home/felipe/Documents/Estructuras/STM32CubeL4/Projects/NUCLEO-L476RG/Examples/TIM/TIM_PWMOutput/Src/main.c:301:2: error: expected ';' at end of input
  301 | 5
      |  ^
      |  ;
......
  309 | 
      |   
/home/felipe/Documents/Estructuras/STM32CubeL4/Projects/NUCLEO-L476RG/Examples/TIM/TIM_PWMOutput/Src/main.c:301:1: error: expected declaration or statement at end of input
  301 | 5
      | ^
make: *** [Example/User/subdir.mk:25: Example/User/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

09:42:12 Build Failed. 3 errors, 1 warnings. (took 170ms)

